[package]
name = "password-menager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "passman"
path = "src/main.rs"

[dependencies]
dirs = "5.0"
rand = "0.9"
reedline = "0.40"
aes-gcm = "0.10"
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.2"
clipboard = "0.5"
zeroize = "1.7"
